fix: overflow

--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -312,6 +312,7 @@ a {
     display: flex; 
     gap: 30px 40px;
     flex-wrap: wrap;
+    overflow: hidden;
 }
 
 .card {
